--- a/Front-end/survey-front/src/index.css
+++ b/Front-end/survey-front/src/index.css
@@ -41,7 +41,7 @@
 .textChoice {
     align-self: center;
     width: 70%;
-    height: 50%;
+    height: 60%;
 }
 
 .submitBtn {
@@ -79,6 +79,32 @@
     font-size: large;
     font-weight: bold;
 }
+
+/*Required field tooltip*/
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: rgba(48, 48, 48, 0.703);
+    color: white;
+    text-align: center;
+    padding: 2px 0;
+    border-radius: 5px;
+
+    position: static;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
 
 /*Dropdown page*/
 
