--- a/Front-end/survey-front/src/index.css
+++ b/Front-end/survey-front/src/index.css
@@ -96,6 +96,7 @@
     text-align: center;
     padding: 2px 0;
     border-radius: 5px;
+    font-size: 15px;
 
     position: static;
     z-index: 1;
