--- a/Front-end/survey-front/src/css/navHeader.scss
+++ b/Front-end/survey-front/src/css/navHeader.scss
@@ -20,7 +20,7 @@ $background: rgb(205, 204, 204);
             background-color: rgb(170, 170, 170);
         }
 
-        &:focus {
+        &:active {
             background-color: rgb(130, 130, 130);
         }
     }
