--- a/Front-end/survey-front/src/css/navHeader.scss
+++ b/Front-end/survey-front/src/css/navHeader.scss
@@ -25,7 +25,12 @@ $background: rgb(205, 204, 204);
         }
     }
 
+    .navLinkSelected {
+        @extend .navLink;
+        background-color: rgb(170, 170, 170);
+    }
+
     .navLinkLeft {
-        margin-right: auto;
+        margin-left: auto;
     }
 }
