--- a/Front-end/survey-front/src/css/toast.scss
+++ b/Front-end/survey-front/src/css/toast.scss
@@ -30,6 +30,10 @@ $info-color: rgb(0, 60, 255);
     p {
         align-self: center
     }
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .infoToast {
