--- a/Front-end/survey-front/src/css/app.scss
+++ b/Front-end/survey-front/src/css/app.scss
@@ -16,11 +16,18 @@ $border-bold: 2px solid rgb(115, 110, 110);
     width: 35vh;
 }
 
+.numberInput {
+    @extend .input;
+    margin: 5px;
+    padding: 5px 5px;
+    width: 9vh;
+}
+
 .button {
     background-color: rgb(205, 204, 204);
     border: $border;
     border-radius: $border-radius;
-    margin: 20px;
+    margin: 20px 10px;
     padding: 5px 20px;
     width: 35vh;
 
@@ -43,7 +50,6 @@ $border-bold: 2px solid rgb(115, 110, 110);
     border-radius: $border-radius;
     margin: 10px;
     padding: 5px 20px;
-    margin: 5px;
     width: 35vh;
     text-align: center;
 }
