fix for weight version adding

--- a/Front-end/survey-front/src/css/answer.scss
+++ b/Front-end/survey-front/src/css/answer.scss
@@ -10,6 +10,8 @@
         align-self: center;
         width: 70%;
         height: 60%;
+        max-width: 100%;
+        max-height: fit-content;
     }
 
     .choiceButton {
