--- a/Front-end/survey-front/src/css/form.scss
+++ b/Front-end/survey-front/src/css/form.scss
@@ -1,4 +1,4 @@
-@import 'app.scss';
+@use 'app.scss';
 
 .form {
     display: flex;
@@ -14,7 +14,7 @@
     background-color: white;
     margin: 10px;
     padding: 10px;
-    border-radius: $border-radius;
+    border-radius: app.$border-radius;
 }
 
 .textInput {
@@ -23,5 +23,5 @@
     background-color: white;
     margin: 10px;
     padding: 10px;
-    border-radius: $border-radius;
+    border-radius: app.$border-radius;
 }
