--- a/Front-end/survey-front/src/css/requiredQuestion.scss
+++ b/Front-end/survey-front/src/css/requiredQuestion.scss
@@ -1,4 +1,4 @@
-@import 'app.scss';
+@use 'app.scss';
 
 .tooltip {
     position: relative;
@@ -12,7 +12,7 @@
         color: white;
         text-align: center;
         padding: 2px 0;
-        border-radius: $border-radius;
+        border-radius: app.$border-radius;
         font-size: 15px;
 
         position: static;
